[cc] Using RendererSettings in pixel tests

This CL reverts tests added in r447153:

> commit 7bc8fc1007007ece8eaa4137967c3162bad4db08
> Author: trchen <trchen@chromium.org>
> Date:   Mon Jan 30 17:26:08 2017 -0800
>
>     [cc] Add SkBlendMode::kDstIn support to cc::Layer

which never interoperated correctly with antialiasing shaders.

With the tests removed, RendererSettings can be correctly used in the
pixel tests without introducing failures.

BUG=717514

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ie6aa3784395650449b5aa76e592f7573d6399caa